--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
     <ul>
       <li> Logistic Regression, Random-Forest Classification, XGBoost</li>
     </ul>
-    <p>Proyek ini merupakan proyek yang bertujuan untuk menentukan apakah seseorang dapat diberikan suatu pinjaman atau tidak. Program tersebut diawali dengan proses pengecekan data null dalam dataset, proses mengganti nilai null tersebut dengan nilai baru, pengecekan data duplikat. Lalu, untuk meningkatkan performansi prediksi tersebut, penggunaan teknik label encoding digunakan. Lalu dengan menggunakan berbagai macam model (Logistic Regression, Random Forest Classification, XGBoost), didapatkan XGBoost merupakan model yang paling baik dengan tingkat akurasi hingga 80%.</p>
+    <p>This project is a project that aims to determine whether someone can be given a loan or not. The program begins with the process of checking null data in the dataset, the process of replacing the null values with new values, checking for duplicate data. Then, to improve the prediction performance, the use of label encoding technique is used. Then by using a variety of models (Logistic Regression, Random Forest Classification, XGBoost), XGBoost is found to be the best model with an accuracy level of up to 80%.</p>
     <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Kaggle Link</a>
 	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Medium</a>
   </div>
@@ -25,7 +25,7 @@
     <ul>
       <li> Regression Methods</li>
     </ul>
-    <p>Program ini merupakan program yang bertujuan untuk menentukan harga rumah dengan beberapa parameter menggunakan regresi linear. Program ini didahului dengan data cleansing. Setelah dibersihkan, data tersebut kemudian dilihat korelasi antara satu parameter dengan parameter lain menggunakan metoda pearson. Setelah ditentukan parameter mana yang akan diramalkan, data tersebut kemudian dilatih menggunakan regresi linear, Lasso, ElasticNet, K-Neighbors-Regressor, Gradient Boosting Regressor. Model-model tersebut kemudian divalidasi untuk melihat keakuratan model dan prediksi yang dihasilkan.</p>
+    <p>This program is a program that aims to determine house prices with several parameters using linear regression. This program is preceded by data cleansing. After cleaning, the data is then examined for the correlation between one parameter and another using the Pearson method. After determining which parameters will be predicted, the data is then trained using linear regression, Lasso, ElasticNet, K-Neighbors-Regressor, Gradient Boosting Regressor. The models are then validated to see the accuracy of the models and the resulting predictions.</p>
     <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/boston-house-price-using-linear-regression" target="_blank">Kaggle Link</a>
   </div>
 </div>
@@ -39,7 +39,7 @@
     <ul>
       <li> Convolutional Neural Network</li>
     </ul>
-    <p>Program ini merupakan program pengenalan citra menggunakan convolutional neural network. Citra mendeteksi suatu tepi dengan menggunakan kumpulan-kumpulan metoda matematis semisal konvolusi 2D, Max Pooling yang dikumpulkan dalam suatu sekuensial. Kemudian, bentuk data latih ini dioptimasi menggunakan fungsi Poisson sebagai loss function. Kemudian, sekuensial dan loss function tersebut dikompilasi dan diimplemetasikan kedalam set data yang kita punya. Model tersebut kemudian dievaluasi dengan menghitung tingkat akurasi.</p>
+    <p>This program is an image recognition program using a convolutional neural network. Image detects an edge using sets of mathematical methods such as 2D convolution, Max Pooling collected in a sequential. Then, this form of training data is optimized using the Poisson function as a loss function. Then, the sequential and loss functions are compiled and implemented into the data set we have. The model is then evaluated by calculating the level of accuracy.</p>
     <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/digit-recognizer-using-mnist-dataset" target="_blank">Kaggle Link</a>
   </div>
 </div>
@@ -53,7 +53,7 @@
     <ul>
       <li> ResNet50, MobileNetV2, and Xception Model</li>
     </ul>
-    <p>Model ini mendeteksi penggunaan citra wajah yang memakai masker menggunakan arsitektur jaringan syaraf tiruan menggunakan ResNet50V2, MobileNetV2, dan Xception yang merupakan model yang sudah dilatih dalam tahap awal. Untuk menspesifikasikan model dalam suatu tujuan yang khusus, perlu dilakukan proses yang dinamakan hyper-tuning yang dalam kasus ini model dilatih untuk mengenal citra wajah menggunakan masker maupun tidak. Hasil yang didapatkan adalah nilai validasi untuk metoda ResNet50V2 dan Xception memiliki nilai akurasi yang lebih baik dibandingkan dengan MobileNetV2. Meski begitu, terdapat trade-off dimana MobileNetV2 memiliki kecepatan latih yang lebih cepat dibandingkan dua metoda yang lain.</p>
+    <p>This model detects the use of a face image wearing a mask using an artificial neural network architecture using ResNet50V2, MobileNetV2, and Xception which are models that have been trained in the early stages. To specify the model in a specific purpose, it is necessary to carry out a process called hyper-tuning in which the model is trained to recognize facial images using masks or not. The results obtained are the validation values for the ResNet50V2 and Xception methods have better accuracy values compared to MobileNetV2. Even so, there is a trade-off where MobileNetV2 has a faster training speed than the other two methods.</p>
     <a class="project-link" href="https://doi.org/10.31219/osf.io/3gph4" target="_blank">Preprint Link</a>
   </div>
 </div>
@@ -67,7 +67,7 @@
     <ul>
       <li> Natural Language Processing</li>
     </ul>
-    <p>Program ini menganalisa sentiment terkait percakapan di lini masa twitter saat sedang ramai skandal kasus investasi yang dilakukan dan didalangi oleh Jouska. Dari hasil tersebut, dapat dilihat bahwa lini masa menganggap masalah ini sebagai isu negatif.</p>
+    <p>This program analyzes the sentiment related to the conversation on the Twitter timeline when the investment case scandal was being carried out and masterminded by Jouska. From these results, it can be seen that the timeline considers this issue as a negative issue.</p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -81,7 +81,7 @@
     <ul>
       <li> Natural Language Processing</li>
     </ul>
-    <p>Program ini menganalisa sentiment terkait percakapan di lini masa twitter tentang kinerja mengenai Menteri Kesehatan pada Juli 2020. Dari table diatas, dapat dilihat bahwa sentiment mengenai Menteri Terawan berada pada posisi yang positif. </p>
+    <p>This program analyzes sentiment related to conversations on the Twitter timeline about the performance of the Minister of Health in July 2020. From the figure above, it can be seen that sentiment regarding Minister Terawan is in a positive position. </p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Sentiment%20Tweet%20Analysis.py" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -96,7 +96,7 @@
     <ul>
       <li>XGBoost</li>
     </ul>
-    <p>Program ini memprediksi gaji seseorang bedasarkan parameter-parameter seperti kelas pekerja, umur, pendidikan, pekerjaan, dll.  Program ini meliputi proses data wrangling, modelling, dan validasi. Model tersebut berhasil menempati posisi 15 dari total 420 orang yang mengikuti kompetisi ini.  </p>
+    <p>This program predicts a person's salary based on parameters such as working class, age, education, occupation, etc. This program includes data wrangling, modeling, and validation processes. This model managed to occupy the 15th position out of a total of 420 people who participated in this competition. </p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/Final%20Project.ipynb" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -110,7 +110,7 @@
     <ul>
       <li>Convolutional Neural Networks</li>
     </ul>
-    <p>Program ini adalah program yang dibuat untuk menyelesaikan kursus di Dicoding Indonesia. Program ini memodelkan simbol tangan yang model tersebut dilatih menggunakan 1314 jumlah data latih dan 874 data tes. Data tersebut kemudian diteruskan kedalam suatu sekuensial model yang terdiri atas lapisan-lapisan jaringan syaraf tiruan. Jaringan ini berbentuk operasi matematis yang digunakan untuk mendeteksi tepian. Tingkat akurasi yang dihasilkan untuk model ini berada pada 97,54%  </p>
+    <p>This program is a program created to complete courses in Dicoding Indonesia. This program models the hand symbols on which the model is trained using 1314 total training data and 874 test data. The data is then forwarded into a sequential model consisting of layers of artificial neural networks. This network takes the form of a mathematical operation used to detect edges. The resulting accuracy rate for this model is at 97.54%  </p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Data%20Sains/RPS%20Final.ipynb" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -127,7 +127,7 @@
     <ul>
       <li>Numerical Methods</li>
     </ul>
-    <p> Program ini dibuat untuk menghitung waktu peluruhan untuk Uranium 235. Selain itu, program ini menghitung nilai pembulatan mesin serta lebar pias yang tepat untuk simulasi ini.  </p>
+    <p> This program was created to calculate the decay time of Uranium 235. In addition, it calculates the engine rounding value as well as the correct grating width for this simulation.  </p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/1-Peluruhan" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -141,7 +141,7 @@
     <ul>
       <li>Numerical Methods</li>
     </ul>
-    <p> Program ini dibuat untuk menghitung kecepatan dari daya suatu atlit balap jika diketahui nilai daya. Perumusan umum yang kita dapat kemudian didiskritisasi menjadi bentuk yang mudah diselesaikan secara komputasi sehingga didapatkan kecepatan sesuai dengan batasan-batasan yang didefinisikan beserta dengan parameternya. </p>
+    <p> This program is made to calculate the speed of a racing athlete if the power value is known. The general formulation that we can then discretise into a form that is computationally easy to solve so that the speed is obtained according to the defined constraints along with the parameters.</p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/2-Mekanika%20Klasik%20Mobil%20Balap" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -155,7 +155,7 @@
     <ul>
       <li>Comparative Study of Euler, Euler-Cromer, and Verlet Methods</li>
     </ul>
-    <p> Program ini dirancang untuk melihat pengaruh beberapa metoda numerik (Euler, Euler-Cromer, dan Verlet) untuk menghitung suatu gerak pendulum dengan memperhatikan tingkat akurasi program. </p>
+    <p> This program is designed to see the effect of several numerical methods (Euler, Euler-Cromer, and Verlet) to calculate a pendulum motion by taking into account the accuracy of the program. </p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/3-Pendulum%20menggunakan%20Euler%2C%20Euler-Cromer%2C%20dan%20Verlet" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -169,7 +169,7 @@
     <ul>
       <li>Numerical Methods</li>
     </ul>
-    <p> Program ini dirancang untuk mensimulasikan Governing Equation untuk gelembang E dan H (1 Dimensi) dan menghitung Hx, Hy, Dz, dan Ez (3 Dimensi).</p>
+    <p> This program is designed to simulate the Governing Equation for E and H (1 Dimension) and calculate Hx, Hy, Dz, and Ez (3 Dimension). </p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/4-Gelombang%20Elektromagnetik" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -183,7 +183,7 @@
     <ul>
       <li>Numerical Methods</li>
     </ul>
-    <p> Program ini dirancang untuk menyelesaikan berbagai persoalan menggunakan Monte-Carlo dan Random Walk. Salah satu permasalahan yang diselesaikan menggunakan Monte Carlo adalah menghitung nilai Pi. Sementara itu, permasalahan yang diselesaikan menggunakan Random Walk adalah pencarian solusi untuk suatu persamaan.</p>
+    <p> This program is designed to solve various problems using Monte-Carlo and Random Walks. One of the problems solved using Monte Carlo is calculating the value of Pi. Meanwhile, the problem that is solved using the Random Walk is finding a solution to an equation.</p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/5-Simulasi%20Monte%20Carlo" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -197,7 +197,7 @@
     <ul>
       <li>Numerical Methods</li>
     </ul>
-    <p> Program ini dirancang untuk menghitung suatu pergerakan elektron dalam kristal NaCl 1 Dimensi menggunakan bantuan potensial Lennard-Jones menggunakan Matlab.</p>
+    <p> This program is designed to calculate a movement of electrons in 1-dimensional NaCl crystals using the help of the Lennard-Jones potential using Matlab.</p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Fisika%20Komputasi/6-Quantum%20Mechanics%20Lennard%20Jones%20Potentials" target="_blank">GitHub Link</a>
   </div>
 </div>
@@ -211,7 +211,7 @@
     <ul>
       <li>Density Functional Theory</li>
     </ul>
-    <p> Program ini dirancang untuk mengkalkulasikan struktur pita dari berbagai macam material menggunakan pemrograman Julia. Hasil dari program ini kemudian dikomparasikan dengan program serupa yaitu Abinit dan VaSP.</p>
+    <p> This program is designed to calculate the ribbon structure of various materials using the Julia programming. The results of this program are then compared with similar programs, namely Abinit and VaSP.</p>
     <a class="project-link" href="https://digilib.itb.ac.id/index.php/gdl/view/41298" target="_blank">Link</a>
   </div>
 </div>
