--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -40,7 +40,7 @@
       <li> Classification Methods</li>
     </ul>
     <p>This program aims to classify the related situation of blood related with the level of eritrocyte, trombocyte, etc.</p>
-    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/haematology?scriptVersionId=48832861" target="_blank">Kaggle Link</a>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/haematology" target="_blank">Kaggle Link</a>
   </div>
 </div>
 
