--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -21,6 +21,20 @@
     <img alt="mountains" src="{{ "/assets/img/2-ai-houseprice.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
+    <h3> Boston House Price (Using CRISP-DM Frameworks)</h3>
+    <ul>
+      <li> Regression Methods</li>
+    </ul>
+    <p>This program is a program that aims to determine house prices with several parameters using linear regression. This program is preceded by data cleansing. After cleaning, the data is then examined for the correlation between one parameter and another using the Pearson method. After determining which parameters will be predicted, the data is then trained using linear regression, Lasso, ElasticNet, K-Neighbors-Regressor, Gradient Boosting Regressor. The models are then validated to see the accuracy of the models and the resulting predictions.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/boston-house-price-english-ver" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/2-ai-houseprice.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
     <h3> Boston House Price </h3>
     <ul>
       <li> Regression Methods</li>
