--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,24 @@
 <div class="user-details">
+  <h1> Data Engineering </h1>
+</div>
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Twitter Data Ingesting </h3>
+    <ul>
+      <li> Apache NiFi (Hortonworks Data Flow)</li>
+    </ul>
+    <p>This project is a project that aims to determine whether someone can be given a loan or not. The program begins with the process of checking null data in the dataset, the process of replacing the null values with new values, checking for duplicate data. Then, to improve the prediction performance, the use of label encoding technique is used. Then by using a variety of models (Logistic Regression, Random Forest Classification, XGBoost), XGBoost is found to be the best model with an accuracy level of up to 80%.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Kaggle Link</a>
+	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Medium</a>
+  </div>
+</div>
+
+
+
+<div class="user-details">
   <h1> Data Science and AI Portfolio </h1>
 </div>
 <div class="user-projects">
@@ -235,7 +255,7 @@
     <img alt="mountains" src="{{ "/assets/img/7-cp-dft.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Band-structure Simulation of Si, Gap, GaN, and TiO2 Rutile Using Julia Programming </h3>
+    <h3> Band-structure Simulation of Si, GaP, GaN, and TiO2 Rutile Using Julia Programming </h3>
     <ul>
       <li>Density Functional Theory</li>
     </ul>
