--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,7 +3,7 @@
 </div>
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/1-de.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Twitter Data Ingesting </h3>
