--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
     <ul>
       <li> Apache NiFi (Hortonworks Data Flow)</li>
     </ul>
-    <p>This project is a project that aims to determine whether someone can be given a loan or not. The program begins with the process of checking null data in the dataset, the process of replacing the null values with new values, checking for duplicate data. Then, to improve the prediction performance, the use of label encoding technique is used. Then by using a variety of models (Logistic Regression, Random Forest Classification, XGBoost), XGBoost is found to be the best model with an accuracy level of up to 80%.</p>
+    <p>This project aims to digest tweets data using Twitter API. The raw data is then sorted based on language: Spanish and not Spanish.</p>
     <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Kaggle Link</a>
 	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Medium</a>
   </div>
