--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,8 +11,7 @@
       <li> Apache NiFi (Hortonworks Data Flow)</li>
     </ul>
     <p>This project aims to digest tweets data using Twitter API. The raw data is then sorted based on language: Spanish and not Spanish.</p>
-    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Kaggle Link</a>
-	<a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/loan-prediction-using-loan-pred-problem-dataset" target="_blank">Medium</a>
+    <a class="project-link" href="/assets/img/1-de.jpg" target="_blank">PDF Link</a>
   </div>
 </div>
 
