--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,7 +10,7 @@
     <ul>
       <li> Apache NiFi (Hortonworks Data Flow)</li>
     </ul>
-    <p>This project aims to digest tweets data using Twitter API. The raw data is then sorted based on language: Spanish and not Spanish.</p>
+    <p>This project aims to digest tweets data using Twitter API. The raw data is then sorted based on language: Spanish and not Spanish Tweets Data.</p>
     <a class="project-link" href="/assets/img/ppt/Ivan Muhammad Siegfried - Twitter Data Ingestion.pdf" target="_blank">PDF Link</a>
   </div>
 </div>
