--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,7 @@
 <div class="user-details">
-  <h1> Data Engineering </h1>
+  <h1> Data Engineering Projects</h1>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/1-de.jpg" | prepend: site.baseurl }}" />
@@ -14,6 +15,21 @@
     <a class="project-link" href="/assets/img/ppt/Ivan Muhammad Siegfried - Twitter Data Ingestion.pdf" target="_blank">PDF Link</a>
   </div>
 </div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/2-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+  </div>
+  <div class="contents-right">
+    <h3> Data Warehousing using Talend </h3>
+    <ul>
+      <li> Talend Open Studio - Data Integration</li>
+    </ul>
+    <p>This project aims to split the data into multiple *.xlsx files based on certain criteria which can be further processed by a data scientist.</p>
+    <a class="project-link" href="/assets/img/ppt/Ivan Muhammad Siegfried - Data Warehousing using Talent.pdf" target="_blank">PDF Link</a>
+  </div>
+</div>
+
 
 
 
