--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/1-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto;/>
+    <img alt="mountains" src="{{ "/assets/img/1-de-a.jpg" | prepend: site.baseurl }}" width: 50%; height: auto;/>
   </div>
   <div class="contents-right">
     <h3> Twitter Data Ingesting </h3>
@@ -18,7 +18,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/2-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+    <img alt="mountains" src="{{ "/assets/img/2-de-a.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
   </div>
   <div class="contents-right">
     <h3> Data Warehousing using Talend </h3>
