--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -30,6 +30,20 @@
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/2-de-a.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+  </div>
+  <div class="contents-right">
+    <h3> Exploring Movie Dataset </h3>
+    <ul>
+      <li> Apache Pig/Tez - Hortonworks Data Platform</li>
+    </ul>
+    <p>This project aims to split the data into multiple *.xlsx files based on certain criteria which can be further processed by a data scientist.</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Movie%20Dataset%20Exploration" target="_blank">PDF Link</a>
+  </div>
+</div>
+
 
 
 
