--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -32,7 +32,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/2-de-a.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+    <img alt="mountains" src="{{ "/assets/img/3-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
   </div>
   <div class="contents-right">
     <h3> Exploring Movie Dataset </h3>
