--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -40,7 +40,7 @@
       <li> Apache Pig/Tez - Hortonworks Data Platform</li>
     </ul>
     <p>This project aims to split the data into multiple *.xlsx files based on certain criteria which can be further processed by a data scientist.</p>
-    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Movie%20Dataset%20Exploration" target="_blank">PDF Link</a>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Movie%20Dataset%20Exploration" target="_blank">GitHub Link</a>
   </div>
 </div>
 
