--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -39,7 +39,7 @@
     <ul>
       <li> Apache Pig/Tez - Hortonworks Data Platform</li>
     </ul>
-    <p>This project aims to split the data into multiple *.xlsx files based on certain criteria which can be further processed by a data scientist.</p>
+    <p>This program aims to explore information from the Movie Dataset using Apache Pig / Tez found on the Hortonworks Data Platform.</p>
     <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/tree/main/Movie%20Dataset%20Exploration" target="_blank">GitHub Link</a>
   </div>
 </div>
