--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -44,7 +44,19 @@
   </div>
 </div>
 
-
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/4-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+  </div>
+  <div class="contents-right">
+    <h3> Dashboarding COVID-19 Data of United States</h3>
+    <ul>
+      <li> Google Data Studio & Google BigQuery</li>
+    </ul>
+    <p>This dashboard aims to find insight about Covid-19 Data on the US. I display death per capita, new cases in linear and logaritmic trend, new deaths with cumulative cases, and also growth cases with 7-day moving average cases. Also, I provide the table with respect to the states.</p>
+    <a class="project-link" href="https://datastudio.google.com/reporting/d96e3266-a7d3-484c-9195-01ead4675d4e" target="_blank">GitHub Link</a>
+  </div>
+</div>
 
 
 <div class="user-details">
