--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -54,7 +54,7 @@
       <li> Google Data Studio & Google BigQuery</li>
     </ul>
     <p>This dashboard aims to find insight about Covid-19 Data on the US. I display death per capita, new cases in linear and logaritmic trend, new deaths with cumulative cases, and also growth cases with 7-day moving average cases. Also, I provide the table with respect to the states.</p>
-    <a class="project-link" href="https://datastudio.google.com/reporting/d96e3266-a7d3-484c-9195-01ead4675d4e" target="_blank">GitHub Link</a>
+    <a class="project-link" href="https://datastudio.google.com/reporting/d96e3266-a7d3-484c-9195-01ead4675d4e" target="_blank">Google Data Studio Link</a>
   </div>
 </div>
 
