--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,11 +18,11 @@
 	
 	
 	
-  <div class="user2">
+<div class="user2">
     <div class="tech">
       <h2><center>Other Softwares, Tools, and Platforms</center></h2>
-	  <center><img src="https://miro.medium.com/max/500/1*vurG5TC0Hr-9i-BQ0dzhSw.png" alt="Google Data Studio" style="width:320px;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/SQLite370.svg/573px-SQLite370.svg.png" alt="VB.NET" style="width:130x;height:70px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Arduino_Logo.svg/1080px-Arduino_Logo.svg.png" alt="VB.NET" style="width:85x;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/207px-Jupyter_logo.svg.png" alt="VB.NET" style="width:60x;height:65px;"></center>
+	  <center><img src="https://miro.medium.com/max/500/1*vurG5TC0Hr-9i-BQ0dzhSw.png" alt="Google Data Studio" style="width:320px;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://miro.medium.com/max/700/1*T-7pG5RckdRQs2xwhf_JOw.jpeg" alt="Google BigQuery" style="width:320px;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/SQLite370.svg/573px-SQLite370.svg.png" alt="VB.NET" style="width:130x;height:70px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Arduino_Logo.svg/1080px-Arduino_Logo.svg.png" alt="VB.NET" style="width:85x;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/207px-Jupyter_logo.svg.png" alt="VB.NET" style="width:60x;height:65px;"></center>
 	  <p><center>These are tools that I mastered.</center></p>
 	</div>
-	</div>
+</div>
 
