--- a/_includes/about.html
+++ b/_includes/about.html
@@ -25,7 +25,8 @@
 	  <hr><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/SQLite370.svg/573px-SQLite370.svg.png" alt="VB.NET" style="width:130x;height:70px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Arduino_Logo.svg/1080px-Arduino_Logo.svg.png" alt="VB.NET" style="width:85x;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/207px-Jupyter_logo.svg.png" alt="VB.NET" style="width:60x;height:65px;">&nbsp;&nbsp;&nbsp;&nbsp;
-	  
+	  <img src="https://www.cloudera.com/content/dam/www/marketing/images/hwx/icons/hdp-icon.png" alt="HDP" style="width:60x;height:65px;">&nbsp;&nbsp;&nbsp;&nbsp;
+	  <img src="https://www.cloudera.com/content/dam/www/marketing/images/hwx/icons/hdf-icon.png" alt="HDF" style="width:60x;height:65px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  </center>
 	  <p><center>These are tools that I mastered.</center></p>
 	</div>
