--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,13 +22,14 @@
     <div class="tech">
       <h2><center>Other Softwares, Tools, and Platforms</center></h2>
 	  <center><img src="https://miro.medium.com/max/500/1*vurG5TC0Hr-9i-BQ0dzhSw.png" alt="Google Data Studio" style="width:320px;height:130px;">&nbsp;&nbsp;&nbsp;&nbsp;<img src="https://miro.medium.com/max/700/1*T-7pG5RckdRQs2xwhf_JOw.jpeg" alt="Google BigQuery" style="width:320px;height:150px;">&nbsp;&nbsp;&nbsp;&nbsp;
-	  <hr><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/PhpMyAdmin_logo_2010_hidef.svg/320px-PhpMyAdmin_logo_2010_hidef.svg.png" alt="phpMyAdmin" style="width:130x;height:70px;">&nbsp;&nbsp;&nbsp;&nbsp;
+	  <br><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/PhpMyAdmin_logo_2010_hidef.svg/320px-PhpMyAdmin_logo_2010_hidef.svg.png" alt="phpMyAdmin" style="width:130x;height:70px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Arduino_Logo.svg/1080px-Arduino_Logo.svg.png" alt="VB.NET" style="width:85x;height:60px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/Jupyter_logo.svg/207px-Jupyter_logo.svg.png" alt="VB.NET" style="width:60x;height:65px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  <img src="https://www.cloudera.com/content/dam/www/marketing/images/hwx/icons/hdp-icon.png" alt="HDP" style="width:60x;height:65px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  <img src="https://www.cloudera.com/content/dam/www/marketing/images/hwx/icons/hdf-icon.png" alt="HDF" style="width:60x;height:65px;">&nbsp;&nbsp;&nbsp;&nbsp;
 	  </center>
 	  <p><center>These are tools that I mastered. </center></p>
+	  <hr>
 	</div>
 </div>
 
