--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -58,6 +58,48 @@
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/4-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+  </div>
+  <div class="contents-right">
+    <h3> ETL Process using PySpark</h3>
+    <ul>
+      <li> PySpark (Apache Spark)</li>
+    </ul>
+    <p>This code is used as an example to Extract, Transform, and Load (ETL) using PySpark.</p>
+    <a class="project-link" href="https://github.com/ivanmsiegfried/Portofolio/blob/main/Pyspark/Data%20Transformation%20and%20Processing%20using%20Pyspark.ipynb" target="_blank">GitHub Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/4-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+  </div>
+  <div class="contents-right">
+    <h3> Using Python (Jupyter Notebook) as Kafka Producer</h3>
+    <ul>
+      <li> Apache Kafka and Python</li>
+    </ul>
+    <p>The use of Python scripts to produce data for Kafka Producer using a fake pizza-based dataset to then be pushed into the Kafka Topic.</p>
+    <a class="project-link" href="https://ivanmsiegfried.medium.com/using-python-jupyter-notebook-as-kafka-producer-38573d212c35" target="_blank">Medium Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/4-de.jpg" | prepend: site.baseurl }}" width: 50%; height: auto; />
+  </div>
+  <div class="contents-right">
+    <h3> Sinking Kafka Topic to MongoDB using Pymongo</h3>
+    <ul>
+      <li> Apache Kafka, MongoDB, and Python</li>
+    </ul>
+    <p>One way to store data in a non-relational form such as tweets from Twitter is to store it with non-relational databases such as MongoDB or Cassandra. On this occasion, the author will demonstrate how data storage Apache Kafka receives and then saves to MongoDB using the help of the pymongo package.</p>
+    <a class="project-link" href="https://ivanmsiegfried.medium.com/sinking-kafka-topic-to-mongodb-using-pymongo-717449569c89" target="_blank">Medium Link</a>
+  </div>
+</div>
+
 
 <div class="user-details">
   <h1> Data Science and AI Portfolio </h1>
