--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -246,6 +246,20 @@
   </div>
 </div>
 
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Text Classification on COVID-19 Tweets </h3>
+    <ul>
+      <li>Natural Language Processing (NLP)</li>
+    </ul>
+    <p>This program is used to classify tweets into 5 classifications: Extremely Negative, Negative, Neutral, Positive, and Extremely Positive. This code is useful for understanding the public's perception of a particular event.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/text-classification-on-covid-19-tweets" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
 <div class="user-details">
   <h1> Computational Physics Portfolio </h1>
 </div>
