--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -104,12 +104,55 @@
 <div class="user-details">
   <h1> Data Science and AI Portfolio </h1>
 </div>
+
 <div class="user-projects">
   <div class="images-left">
     <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Loan Prediction </h3>
+    <h3> Clinical Features Model to Predict Stroke </h3>
+    <ul>
+      <li> Logistic Regression, Gradient Boosting Classifier, XGBClassifier</li>
+    </ul>
+    <p>This program is used to find the right model for the stroke healthcare dataset.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/clinical-features-model-to-predict-stroke" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Bankruptcy Predictive Model (Plus Caping Outliers) </h3>
+    <ul>
+      <li> Logistic Regression, Random-Forest Classifier, XGBClassifier</li>
+    </ul>
+    <p>This program is used to find the right model for the Telecomunication dataset.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/telco-classification" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Bankruptcy Predictive Model (Plus Caping Outliers) </h3>
+    <ul>
+      <li> Logistic Regression, Random-Forest Classifier, XGBClassifier</li>
+    </ul>
+    <p>This program is used to find the right model for the bankruptcy model.</p>
+    <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/bankruptcy-predictive-model-plus-caping-outliers" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Telecomunication Classification Model </h3>
     <ul>
       <li> Logistic Regression, Random-Forest Classification, XGBoost</li>
     </ul>
@@ -257,6 +300,90 @@
     </ul>
     <p>This program is used to classify tweets into 5 classifications: Extremely Negative, Negative, Neutral, Positive, and Extremely Positive. This code is useful for understanding the public's perception of a particular event.</p>
     <a class="project-link" href="https://www.kaggle.com/ivanmsiegfried/text-classification-on-covid-19-tweets" target="_blank">Kaggle Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> The Framework Process of Data Science: Cross-industry Standard Process for Data Mining (CRISP-DM) </h3>
+    <ul>
+      <li>CRISP-DM</li>
+    </ul>
+    <p>In general, there are two frameworks that are commonly used by data scientists to gather information and create models from raw data. Commonly used methods include the Cross-industry Standard Process for Data Mining (CRISP-DM) and Obtain, Scrub, Explore, Model, and Interpret (OSEMN) Framework. I will explain the use of CRISP-DM and its use directly in the program that has been created.</p>
+    <a class="project-link" href="https://ivanmsiegfried.medium.com/the-framework-process-of-data-science-cross-industry-standard-process-for-data-mining-crisp-dm-e992d16e62c6#09e0-867a3159d0ec" target="_blank">Medium Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Understanding Naive-Bayes Classifier </h3>
+    <ul>
+      <li>Naive-Bayes Classifier</li>
+    </ul>
+    <p>The Naïve Bayes Classifier uses the probability method as the statistical basis it uses. For example, we have frame data regarding a text whether it is talking about sports or not.</p>
+    <a class="project-link" href="https://ivanmsiegfried.medium.com/understanding-naive-bayes-classifier-6b67d4d1ec50" target="_blank">Medium Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Ridge-Regression in the Nutshell </h3>
+    <ul>
+      <li>Ridge-Regression</li>
+    </ul>
+    <p>Ridge Regression is a regular form of linear regression. The cost function or commonly known as the loss function is a function used to find parameters in regression. This parameter can be taken by minimizing it so that the parameter θ is obtained. This is used as a statistical basis for the Ridge Regression method. </p>
+    <a class="project-link" href="https://ivanmsiegfried.medium.com/ridge-regression-in-the-nutshell-a0d91a564e0c" target="_blank">Medium Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Learning Logistic Regression </h3>
+    <ul>
+      <li>Logistic Regression</li>
+    </ul>
+    <p>In general, the classification method of logistic regression is to create a probability boundary. If there is a value that exceeds this probability, the model will assume that the value is in the positive class (classified to 1). However, if a value is less than this probability, then the value is in the negative class (or we classify it to a value of 0). </p>
+    <a class="project-link" href="https://ivanmsiegfried.wordpress.com/2021/04/16/learning-logistic-regression/" target="_blank">Wordpress Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Understanding AdaBoost Classifier </h3>
+    <ul>
+      <li>AdaBoost Classifier</li>
+    </ul>
+    <p>One of the tools that are relied upon and used to perform classification is AdaBoost. AdaBoost is one of the oldest tools available using the boosting method. One of the algorithms used is to combine various insignificant classifiers into one very strong classifier. </p>
+    <a class="project-link" href="https://ivanmsiegfried.wordpress.com/2021/04/16/understanding-adaboost-classifier/" target="_blank">Wordpress Link</a>
+  </div>
+</div>
+
+<div class="user-projects">
+  <div class="images-left">
+    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+  </div>
+  <div class="contents-right">
+    <h3> Understand the concept of Linear Regression </h3>
+    <ul>
+      <li>Linear Regression</li>
+    </ul>
+    <p>Linear regression is a basic statistical tool for predictive analysis. </p>
+    <a class="project-link" href="https://ivanmsiegfried.wordpress.com/2021/04/16/understand-the-concept-of-linear-regression/" target="_blank">Wordpress Link</a>
   </div>
 </div>
 
