--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -107,7 +107,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/clinical.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Clinical Features Model to Predict Stroke </h3>
@@ -121,10 +121,10 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/telco.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Bankruptcy Predictive Model (Plus Caping Outliers) </h3>
+    <h3> Telecomunication Classification Model  </h3>
     <ul>
       <li> Logistic Regression, Random-Forest Classifier, XGBClassifier</li>
     </ul>
@@ -135,7 +135,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/bankrupt.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Bankruptcy Predictive Model (Plus Caping Outliers) </h3>
@@ -152,7 +152,7 @@
     <img alt="mountains" src="{{ "/assets/img/1-ai-loan.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
-    <h3> Telecomunication Classification Model </h3>
+    <h3> Loan Risk Prediction </h3>
     <ul>
       <li> Logistic Regression, Random-Forest Classification, XGBoost</li>
     </ul>
