--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -277,7 +277,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/covidtweet.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Text Classification on COVID-19 Tweets </h3>
@@ -291,7 +291,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/crispdm.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> The Framework Process of Data Science: Cross-industry Standard Process for Data Mining (CRISP-DM) </h3>
@@ -305,7 +305,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/naivebayes.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Understanding Naive-Bayes Classifier </h3>
@@ -319,7 +319,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/ridge.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Ridge-Regression in the Nutshell </h3>
@@ -333,7 +333,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/logreg.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Learning Logistic Regression </h3>
@@ -347,7 +347,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/adaboost.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Understanding AdaBoost Classifier </h3>
@@ -361,7 +361,7 @@
 
 <div class="user-projects">
   <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/8-ai-rps.jpg" | prepend: site.baseurl }}" />
+    <img alt="mountains" src="{{ "/assets/img/linreg.jpg" | prepend: site.baseurl }}" />
   </div>
   <div class="contents-right">
     <h3> Understand the concept of Linear Regression </h3>
